Change the font

--- a/sass/__base.sass
+++ b/sass/__base.sass
@@ -18,7 +18,7 @@ $large-screen-min: 1025px
     padding: 0
 
 body
-    font-family: monospace
+    font-family: FantasqueSansMono, cursive;
     background: rgb(200, 200, 200)
 
 a
