--- a/sass/_main.sass
+++ b/sass/_main.sass
@@ -1,10 +1,14 @@
 @import '__base.sass';
 
+
+$headerHeight: 5rem
+$footerHeight: 3rem
+
 main
-    background-color: pink
-    min-height: calc(100vh - 5rem)
+    background-color: ivory
+    min-height: calc(100vh - 8rem)
     postion: fixed
     left: 0
     top: 0
-    margin-top: 5rem
+    margin-top: $headerHeight
     padding: 0
