--- a/sass/__base.sass
+++ b/sass/__base.sass
@@ -1,6 +1,12 @@
 $color-1: rgb(145, 230, 115)
 $color-2: rgb(230, 145, 115)
 $color-3: rgb(115, 145, 230)
+$body-background: rgb(200, 200, 200)
+$dark-color: rgb(50, 50, 50)
+$light-color: $color-2
+
+$header-height: 4rem
+$footer-height: 3rem
 
 $medium-screen-min: 700px
 $large-screen-min: 1025px
@@ -19,7 +25,7 @@ $large-screen-min: 1025px
 
 body
     font-family: FantasqueSansMono, cursive;
-    background: rgb(200, 200, 200)
+    background: $body-background
 
 a
     color: inherit
