--- a/sass/_footer.sass
+++ b/sass/_footer.sass
@@ -1,19 +1,16 @@
 @import '__base.sass';
 
 
-$dark: rgb(50, 50, 50)
-$light: $color-2
-
 #footer
-    background: $dark
+    background: $dark-color
     border: 1px solid black
-    height: 3rem
+    height: $footer-height
     width: 100vw
     display: table
     overflow: hidden
     
 #footer-content
-    color: $light
+    color: $light-color
     display: table-cell
     vertical-align: middle
     text-align: center
