--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -1,5 +1,6 @@
 @import "__base.sass";
 
+
 .logo-color-1
     color: $color-1 !important
 
@@ -16,7 +17,7 @@
     color: $color-2 !important
 
 #header
-    background: rgb(0,0,0)
+    background: black
     position: fixed
     left: 0
     top: 0
@@ -24,12 +25,12 @@
 
 #header-inside-box
     width: 100vw
-    height: 3rem
+    height: $header-height
     width: 100vw
 
 #logo
     display: block
-    background: rgb(50, 50, 50)
+    background: $dark-color
     font-size: 2.2rem
     font-weight: 500
     margin: 0
@@ -64,7 +65,7 @@
         padding: 1rem
         padding-right: 0.5rem
         display: inline
-        background: rgb(50, 50, 50)
+        background: $dark-color
         transition: transform 0.2s
 
     @include lg
@@ -74,14 +75,14 @@
     color: $color-3
 
 #dropdown-menu
-    background: rgb(50, 50, 50)
+    background: $dark-color
     float: right
     font-size: 2rem
-    color: rgb(240,230,220)
+    color: $color-1
     padding: 15px
 
     a :hover
-        color: $color-1
+        color: $color-3
 
     @include md
         display: none
