Add dropdown menu

--- a/sass/__base.sass
+++ b/sass/__base.sass
@@ -2,7 +2,8 @@ $color-1: rgb(145, 230, 115)
 $color-2: rgb(230, 145, 115)
 $color-3: rgb(115, 145, 230)
 $body-background: rgb(200, 200, 200)
-$dark-color: rgb(50, 50, 50)
+$header-background: rgb(182, 182, 182)
+$dark-color: rgb(40, 50, 60)
 $light-color: $color-2
 
 $header-height: 4rem
