Style main content

--- a/sass/__base.sass
+++ b/sass/__base.sass
@@ -1,7 +1,7 @@
 $color-1: rgb(145, 230, 115)
 $color-2: rgb(230, 145, 115)
 $color-3: rgb(115, 145, 230)
-$body-background: rgb(200, 200, 200)
+$body-background: rgb(250, 250, 250)
 $header-background: rgb(182, 182, 182)
 $dark-color: rgb(40, 50, 60)
 $light-color: $color-2
@@ -27,6 +27,14 @@ $large-screen-min: 1025px
 body
     font-family: FantasqueSansMono, cursive;
     background: $body-background
+
+
+::selection
+    background: $color-2
+
+main p
+    margin-top: 1rem
+
 
 a
     color: inherit
